--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -202,44 +202,147 @@
                 const updateButtonContainer = document.getElementById("updateButtonContainer");
                     updateButtonContainer.innerHTML =
                         '<button id="updateButton" type="button" class="btn btn-primary">Update</button>';
-                    document.querySelector("#updateButton").addEventListener("click", function () {
-                            var internalReviewCount =
-                                document.getElementById(
-                                    "project-internal-review-count"
-                                ).value;
-                            var externalReviewCount =
-                                document.getElementById(
-                                    "project-external-review-count"
-                                ).value;
-                            var data = {
-                                internal_review_count: internalReviewCount,
-                                external_review_count: externalReviewCount,
-                            };
-                            fetch(
-                                "/api/review/update-review/" +
-                                    targetData.id,
-                                {
+                document.querySelector("#updateButton").addEventListener("click", function () {
+                        var internalReviewCount =
+                            document.getElementById(
+                                "project-internal-review-count"
+                            ).value;
+                        var externalReviewCount =
+                            document.getElementById(
+                                "project-external-review-count"
+                            ).value;
+                        var data = {
+                            internal_review_count: internalReviewCount,
+                            external_review_count: externalReviewCount,
+                        };
+                        fetch(
+                            "/api/review/update-review/" +
+                                targetData.id,
+                            {
+                                method: "PUT",
+                                headers: {
+                                    "Content-Type": "application/json",
+                                },
+                                body: JSON.stringify(data),
+                            }
+                        )
+                        .then((response) => response.json())
+                        .then((data) => {
+                            console.log(
+                                "Review counts updated successfully:",
+                                data
+                            );
+                        })
+                        .catch((error) => {
+                            console.error(
+                                "Error updating review counts:",
+                                error
+                            );
+                        });
+                    });
+                
+                    const updateButtonCon = document.getElementById("updateButtonContainer");
+                    updateButtonCon.innerHTML =
+                        '<button type="submit" class="btn btn-primary">Update</button>';
+                    document
+                        .querySelector("#deliverable-type-form")
+                        .addEventListener("submit", function (event) {
+                            event.preventDefault();
+                            let deliverableList = [];
+                            targetData.deliverableDto.forEach((a) => {
+                                const checkbox = document.querySelector(
+                                    `#checkbox-${a.id}`
+                                );
+                                if (checkbox.checked) {
+                                    deliverableList.push({
+                                        id: a.id,
+                                        status: true,
+                                    });
+                                }
+                            });
+                            console.log("deliverable", deliverableList);
+                            if(deliverableList.length !== 0) {
+                                fetch(`/api/deliverable/update-status`, {
                                     method: "PUT",
                                     headers: {
                                         "Content-Type": "application/json",
                                     },
-                                    body: JSON.stringify(data),
-                                }
-                            )
-                            .then((response) => response.json())
-                            .then((data) => {
-                                console.log(
-                                    "Review counts updated successfully:",
-                                    data
-                                );
-                            })
-                            .catch((error) => {
-                                console.error(
-                                    "Error updating review counts:",
+                                    body: JSON.stringify(deliverableList),
+                                })
+                                .then((response) => response.json())
+                                .then((data) => {
+                                    console.log(
+                                        "Status updated successfully:",
+                                        data
+                                    );
+                                })
+                                .catch((error) => {
+                                    console.error(
+                                        "Error updating status:",
                                     error
-                                );
-                            });
+                                    );
+                                });
+                            }
                         });
+                    const updateButtonC =
+                    document.getElementById("updateButtonContainer");
+                updateButtonC.innerHTML =
+                    '<button id="update" type="button" class="btn btn-primary">Update</button>';
+
+                document
+                    .querySelector("#update")
+                    .addEventListener("click", function (e) {
+                        const projectId = parseInt(
+                            document.querySelector(
+                                "#current-edditing-projetc-id"
+                            ).value
+                        );
+
+                        const amountDto = {
+                            basic_design: parseInt(
+                                document.querySelector(
+                                    "#edit-basic-design-count"
+                                ).value
+                            ),
+                            detail_design: parseInt(
+                                document.querySelector(
+                                    "#edit-detail-design-count"
+                                ).value
+                            ),
+                            coding: parseInt(
+                                document.querySelector("#edit-coding-count")
+                                    .value
+                            ),
+                            unit_testing: parseInt(
+                                document.querySelector(
+                                    "#edit-unit-testing-count"
+                                ).value
+                            ),
+                            integrated_testing: parseInt(
+                                document.querySelector(
+                                    "#edit-integrated-testing-count"
+                                ).value
+                            ),
+                        };
+
+                        $.ajax({
+                            url: `/api/project/update/amount/${projectId}`, // Replace with the actual URL for your project registration endpoint
+                            type: "PUT",
+                            data: JSON.stringify(amountDto),
+                            dataType: "json",
+                            contentType: "application/json; charset=utf-8",
+                            success: async function (data) {
+                                // Reset the form if needed
+                                console.log("this projce has benn saved", data);
+                                // event.currentTarget.submit();
+                            },
+                            error: function (data) {
+                                alert("Error registering project");
+                                // event.currentTarget.submit();
+                            },
+                        });
+                    });
+                    
             }
 
             const clientList = await getClientList();
@@ -929,57 +1032,7 @@
 
                     //_______________________________________deliverable update alert box put
 
-                    if (loginUser.currentUser.role === "PROJECT_MANAGER") {
-                        const updateButtonCon =
-                            document.getElementById("updateButtonContainer");
-                        updateButtonCon.innerHTML =
-                            '<button type="submit" class="btn btn-primary">Update</button>';
-                        document
-                            .querySelector("#deliverable-type-form")
-                            .addEventListener("submit", function (event) {
-                                event.preventDefault();
-
-                                let deliverableList = [];
-
-                                targetData.deliverableDto.forEach((a) => {
-                                    const checkbox = document.querySelector(
-                                        `#checkbox-${a.id}`
-                                    );
-
-                                    if (checkbox.checked) {
-                                        deliverableList.push({
-                                            id: a.id,
-                                            status: true,
-                                        });
-                                    }
-                                });
-
-                                console.log("deliverable", deliverableList);
-
-                                if(deliverableList.length !== 0) {
-                                    fetch(`/api/deliverable/update-status`, {
-                                        method: "PUT",
-                                        headers: {
-                                            "Content-Type": "application/json",
-                                        },
-                                        body: JSON.stringify(deliverableList),
-                                    })
-                                    .then((response) => response.json())
-                                    .then((data) => {
-                                        console.log(
-                                            "Status updated successfully:",
-                                            data
-                                        );
-                                    })
-                                    .catch((error) => {
-                                        console.error(
-                                            "Error updating status:",
-                                        error
-                                        );
-                                    });
-                                }
-                            });
-                    }
+                    
 
                     //____________________________________________________deliverable update end
 
@@ -1212,68 +1265,6 @@
                         }
                     });
                 });
-
-            if (loginUser.currentUser.role === "PROJECT_MANAGER") {
-                const updateButtonC =
-                    document.getElementById("updateButtonContainer");
-                updateButtonC.innerHTML =
-                    '<button id="update" type="button" class="btn btn-primary">Update</button>';
-
-                document
-                    .querySelector("#update")
-                    .addEventListener("click", function (e) {
-                        const projectId = parseInt(
-                            document.querySelector(
-                                "#current-edditing-projetc-id"
-                            ).value
-                        );
-
-                        const amountDto = {
-                            basic_design: parseInt(
-                                document.querySelector(
-                                    "#edit-basic-design-count"
-                                ).value
-                            ),
-                            detail_design: parseInt(
-                                document.querySelector(
-                                    "#edit-detail-design-count"
-                                ).value
-                            ),
-                            coding: parseInt(
-                                document.querySelector("#edit-coding-count")
-                                    .value
-                            ),
-                            unit_testing: parseInt(
-                                document.querySelector(
-                                    "#edit-unit-testing-count"
-                                ).value
-                            ),
-                            integrated_testing: parseInt(
-                                document.querySelector(
-                                    "#edit-integrated-testing-count"
-                                ).value
-                            ),
-                        };
-
-                        $.ajax({
-                            url: `/api/project/update/amount/${projectId}`, // Replace with the actual URL for your project registration endpoint
-                            type: "PUT",
-                            data: JSON.stringify(amountDto),
-                            dataType: "json",
-                            contentType: "application/json; charset=utf-8",
-                            success: async function (data) {
-                                alert("Project registered successfully");
-                                // Reset the form if needed
-                                console.log("this projce has benn saved", data);
-                                // event.currentTarget.submit();
-                            },
-                            error: function (data) {
-                                alert("Error registering project");
-                                // event.currentTarget.submit();
-                            },
-                        });
-                    });
-            }
 
             const sortProjectByDepartment = await getData(
                 "/api/project/list/sort/by/department"
@@ -2584,13 +2575,27 @@
                     data-toggle-extra="tab-content"
                 >
                     <div
-                        class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-2 row-cols-xl-3"
-                        id="sort-container"
-                        style="margin: 10px"
+                        class=" container rounded-2"
                     >
+                        <div
+                        class="row col-rols-6 border-bottom border border-dark fs-5 fw-bold bg-primary text-white"
+                        >
+                            <div class="col p-0 text-center">Status</div>
+                            <div class="col p-0 text-center">Title</div>
+                            <div class="col p-0 text-center">Start</div>
+                            <div class="col p-0 text-center">End</div>
+                            <div class="col p-0 text-center">Name</div>
+                            <div class="col p-0 text-center">Role</div>
+                        </div>
+                        <div
+                            class="py-4 d-flex flex-column gap-2"
+                            style="background-color: #e5e5f7"
+                            id='sort-container'
+                        >
                         <!-- TODO :: SHOW ALL PROJECTS LIST START FROM HERE -->
 
                         <!-- TODO :: SHOW ALL PROJECTS LIST END HERE -->
+                        </div>
                     </div>
                 </div>
                 <!-- project end -->
