fixde error when login with pmo or sdqc

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -812,7 +812,7 @@
                         );
                     default:
                         console.log("pmo or sdqc");
-                        return await getData(`/api/project/new/list`);
+                        return await getData(`/api/project/new/list/role/${loginUser.currentUser.role}/id/${loginUser.currentUser.id}`);
                 }
             }
 
